--- a/app/views/figures/new.erb
+++ b/app/views/figures/new.erb
@@ -4,21 +4,21 @@
   </p>
   <p>
     Figure Titles: <br>
-    <%Title.all.each.do |title|%>
-      <input type="checkbox" name="figure[title_ids][]" value="<%= title.id%>" id="title_<%=title.id%>"> <%=title.name%>
-    <% end%>
+    <% Title.all.each do |title| %>
+        <input type="checkbox" name="figure[title_ids][]" value="<%= title.id %>" id="title_<%= title.id %>"> <%= title.name %>
+    <% end %>
   </p>
   <p>
     Figure Landmarks: <br>
-    <%Landmark.all.each do |landmark|%>
-      <input type="checkbox" name="figure[landmark_ids][]" value="<%= landmark.id%>" id="landmark_<%=landmark.id %>"><%=landmark.name%>
-    <%end%>
+    <% Landmark.all.each do |landmark| %>
+    <input type="checkbox" name="figure[landmark_ids][]" value="<%= landmark.id %>" id="landmark_<%= landmark.id %>"> <%= landmark.name %>
+    <% end %>
   </p>
   <p>
     Create new Landmark: <input type="text" name="landmark[name]" id="new_landmark">
   </p>
   <p>
-    Create new Title: <input type="text" name="landmark[title]" id="new_title">
+    Create new Title: <input type="text" name="title[name]" id="new_title">
   </p>
   <p>
     <input type="submit" value="Create New Figure">
