--- a/app/views/landmarks/index.erb
+++ b/app/views/landmarks/index.erb
@@ -1,6 +1,6 @@
 <h1>Landmarks</h1>
 <ul>
-  <% @landmarks.each do |figure| %>
+  <% @landmarks.each do |landmark| %>
       <li><a href="/figures/<%= figure.id %>"><%= figure.name %></a></li>
   <% end %>
 </ul>
