automatically backed up by learn

--- a/app/views/landmarks/new.erb
+++ b/app/views/landmarks/new.erb
@@ -4,7 +4,7 @@
   </p>
   <p>
     Landmark Titles: <br>
-    <% Title.all.each do |title| %>
+    <% Landmark.all.each do |title| %>
         <input type="checkbox" name="figure[title_ids][]" value="<%= title.id %>" id="title_<%= title.id %>"> <%= title.name %>
     <% end %>
   </p>
